--- a/index.html
+++ b/index.html
@@ -73,6 +73,23 @@
           <img class="image" src="images/Group 18.png" alt="group" />
         </div>
       </div>
+      <!-- this section for gamer -->
+      <div class="gamer">
+        <div>
+          <img src="images/pngwing 4.png" alt="pngwing" class="image" />
+        </div>
+        <div class="gamer-section2">
+          <h1 class="gamer-title">We are gamer</h1>
+          <p class="gamer-content">
+            An international digital games and entertainment company. We
+            develop, publish and distribute multiplayer mobile games. We reach
+            over 400 million players each month and our audience keeps growing.
+          </p>
+          <button class="gamer-btn">know more</button>
+          <p class="gamer-content1">Our purpose...</p>
+          <p class="gamer-content2">“unleash the gamer in everyone”</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
