added desktop part with responsive

--- a/index.html
+++ b/index.html
@@ -90,6 +90,228 @@
           <p class="gamer-content2">“unleash the gamer in everyone”</p>
         </div>
       </div>
+      <!-- this section for funny videos -->
+      <div class="videos">
+        <span class="online">Online Games</span>
+        <span class="funny">Funny Videos</span>
+        <p class="funny-txt">
+          A Collection of Hilarious Videos to Brighten Your Day
+        </p>
+      </div>
+      <div class="card">
+        <div class="box">
+          <div class="box-container">
+            <img
+              class="box-image"
+              src="images/Rectangle 4.png"
+              alt="rectangle"
+            />
+          </div>
+          <div class="icon">
+            <div>
+              <img
+                class="play-button"
+                src="logos/play-button 1.svg"
+                alt="play-button"
+              />
+            </div>
+            <div class="text">Watch Now</div>
+          </div>
+          <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div>
+        <div class="box">
+          <div class="box-container">
+            <img
+              class="box-image"
+              src="images/Rectangle 5.png"
+              alt="rectangle"
+            />
+          </div>
+          <div class="icon">
+            <div class="play-button">
+              <img src="logos/play-button 1.svg" alt="play-button" />
+            </div>
+            <div class="text">Watch Now</div>
+          </div>
+          <p>Did you score? #unblockedgames #school</p>
+        </div>
+        <div class="box">
+          <div class="box-container">
+            <img
+              class="box-image"
+              src="images/Rectangle 7.png"
+              alt="rectangle"
+            />
+          </div>
+          <div class="icon">
+            <div class="play-button">
+              <img src="logos/play-button 1.svg" alt="play-button" />
+            </div>
+            <div class="text">Watch Now</div>
+          </div>
+          <p>Breaking game records like OG</p>
+        </div>
+        <div class="box">
+          <div class="box-container">
+            <img
+              class="box-image"
+              src="images/Rectangle 6.png"
+              alt="rectangle"
+            />
+          </div>
+          <div class="icon">
+            <div class="play-button">
+              <img src="logos/play-button 1.svg" alt="play-button" />
+            </div>
+            <div class="text">Watch Now</div>
+          </div>
+          <p>Busted gaming on school laptop, but you are still lit.</p>
+        </div>
+      </div>
+      <!-- this section for instantly -->
+      <div class="instantly">
+        <div class="instantly-content">
+          <h1 class="instantly-title">Play Instantly</h1>
+          <h1 class="instantly-title1">No Downloads</h1>
+          <h1 class="instantly-title1">No Installs.</h1>
+          <p class="instantly-txt">
+            Play games online for free without downloading. Just click the Play
+            button and play instantly in your browser.
+          </p>
+        </div>
+        <div class="instantly-img">
+          <img src="images/Rectangle 55.png" alt="rectangle" class="image2" />
+          <img src="images/Rectangle 66.png" alt="rectangle" class="image3" />
+        </div>
+      </div>
+      <div class="instantly2">
+        <div class="instantly-content2">
+          <h1 class="instantly-title">Play Games</h1>
+          <h1 class="instantly-title1">Online Anywhere</h1>
+          <h1 class="instantly-title1">Anytime!</h1>
+          <p class="instantly-txt">
+            PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you
+            can play your favorite games online for free, any time, anywhere ,
+            on any device.
+          </p>
+        </div>
+        <div class="instantly-img">
+          <img src="images/Rectangle 67.png" alt="rectangle" class="image2" />
+          <img src="images/Rectangle 78.png" alt="rectangle" class="image3" />
+        </div>
+      </div>
+      <!-- this section for careers -->
+      <div class="careers">
+        <div class="careers-content">
+          <h1 class="careers-title">Careers</h1>
+          <p class="careers-descriptions">
+            Gamer is driven to create the best and most fun games for our
+            millions of players all around the world, and we,re always on the
+            lookout for more top talent to join our growing team. If you,d like
+            to help us make great games and be a part of Gamers bright future,
+            we,d love to hear from you.
+          </p>
+          <div class="section-place">
+            <ul class="section">
+              <li class="list">Multimedia Artist +</li>
+              <li class="list">Data Engineer +</li>
+              <li class="list">Adroid Engineer +</li>
+              <li class="list">Server Developer +</li>
+              <li class="list">Group Financial Accountant +</li>
+              <li class="list">Senior User Acuisition Specialist +</li>
+            </ul>
+            <ul class="place">
+              <li class="list1">Lisbon, Portugal</li>
+              <li class="list1">Lisbon, Portugal</li>
+              <li class="list1">Zoetermeer, Netherlands</li>
+              <li class="list1">Lisbon, Portugal</li>
+              <li class="list1">London, United Kingdom</li>
+              <li class="list1">Lisbon, Portugal</li>
+            </ul>
+          </div>
+          <button class="careers-btn">See all positions</button>
+        </div>
+        <div class="career-img">
+          <img src="images/Group 65.png" alt="group" class="image" />
+        </div>
+      </div>
+      <!-- this section for games -->
+      <div class="games">
+        <div class="games-btn">
+          <img src="images/Rectangle 11.png" alt="rectangle" />
+          <p>Action Games</p>
+        </div>
+        <div class="games-btn">
+          <img src="images/Rectangle 12.png" alt="rectangle" />
+          <p>Action Games</p>
+        </div>
+        <div class="games-btn">
+          <img src="images/Rectangle 13.png" alt="rectangle" />
+          <p>Arcade Games</p>
+        </div>
+        <div class="games-btn">
+          <img src="images/Rectangle 14.png" alt="rectangle" />
+          <p>Educational Games</p>
+        </div>
+        <div class="games-btn">
+          <img src="images/Rectangle 15.png" alt="rectangle" />
+          <p>Word Games</p>
+        </div>
+        <div class="games-btn">
+          <img src="images/Rectangle 16.png" alt="rectangle" />
+          <p>Role Palying Games</p>
+        </div>
+        <div class="games-btn">
+          <img src="images/Rectangle 17.png" alt="rectangle" />
+          <p>Music & Audio Games</p>
+        </div>
+        <div class="games-btn">
+          <img src="images/Rectangle 18.png" alt="rectangle" />
+          <p>Puzzle Games</p>
+        </div>
+        <div class="games-btn">
+          <img src="images/Rectangle 19.png" alt="rectangle" />
+          <p>Strategy Games</p>
+        </div>
+      </div>
+      <!-- this section for footer -->
+      <footer class="main-footer">
+        <div class="footer-main">
+          <div class="footer-name">
+            <img src="images/Frame.png" alt="frame" />
+            <h1 class="footer-title">
+              <span class="single-letter">G</span>amer
+            </h1>
+          </div>
+          <div class="footer-info">
+            <a class="footer-link" href="#">Our Story</a>
+            <a class="footer-link" href="#">Games</a>
+            <a class="footer-link" href="#">Web Games</a>
+            <a class="footer-link" href="#">Careers</a>
+            <a class="footer-link" href="#">My Account</a>
+            <a class="footer-link" href="#">My Account</a>
+          </div>
+          <div class="footer-logo">
+            <img src="logos/twitter 1.svg" alt="twitter" />
+            <img src="logos/facebook 1.svg" alt="facebook" />
+            <img src="logos/Group 49.svg" alt="Group" />
+            <img src="logos/linkedin 1.svg" alt="linkedin" />
+            <img src="logos/instagram 1.svg" alt="instagram" />
+            <img src="logos/apple 1.svg" alt="apple" />
+          </div>
+          <div class="terms">
+            <h1 class="footer-txt">Terms and Conditions</h1>
+            <h1 class="footer-txt">Privacy Policy</h1>
+            <h1 class="footer-txt">Cookie Policy</h1>
+            <h1 class="footer-txt">Privacy Settings</h1>
+          </div>
+          <div class="play">
+            <p class="footer-txt">
+              Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+            </p>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
