more responsive update

--- a/index.html
+++ b/index.html
@@ -152,8 +152,12 @@
           </p>
         </div>
         <div class="instantly-img">
-          <img src="images/Rectangle 55.png" alt="rectangle" class="image2" />
-          <img src="images/Rectangle 66.png" alt="rectangle" class="image3" />
+          <div class="image-2">
+            <img src="images/Rectangle 55.png" alt="rectangle" class="image2" />
+          </div>
+          <div class="image-3">
+            <img src="images/Rectangle 66.png" alt="rectangle" class="image3" />
+          </div>
         </div>
       </div>
       <div class="instantly2">
@@ -168,8 +172,12 @@
           </p>
         </div>
         <div class="instantly-img">
-          <img src="images/Rectangle 67.png" alt="rectangle" class="image4" />
-          <img src="images/Rectangle 78.png" alt="rectangle" class="image5" />
+          <div class="image-4">
+            <img src="images/Rectangle 67.png" alt="rectangle" class="image4" />
+          </div>
+          <div class="image-5">
+            <img src="images/Rectangle 78.png" alt="rectangle" class="image5" />
+          </div>
         </div>
       </div>
       <!-- this section for careers -->
