--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
               alt="rectangle"
             />
           </div>
-          <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          <p class="box-txt">
+            No Download. No Installs. Play games Instantly on Gamer.
+          </p>
         </div>
         <div class="box">
           <div class="box-container">
@@ -117,7 +119,7 @@
               alt="rectangle"
             />
           </div>
-          <p>Did you score? #unblockedgames #school</p>
+          <p class="box-txt">Did you score? #unblockedgames #school</p>
         </div>
         <div class="box">
           <div class="box-container">
@@ -127,7 +129,7 @@
               alt="rectangle"
             />
           </div>
-          <p>Breaking game records like OG</p>
+          <p class="box-txt">Breaking game records like OG</p>
         </div>
         <div class="box">
           <div class="box-container">
@@ -137,7 +139,9 @@
               alt="rectangle"
             />
           </div>
-          <p>Busted gaming on school laptop, but you are still lit.</p>
+          <p class="box-txt">
+            Busted gaming on school laptop, but you are still lit.
+          </p>
         </div>
       </div>
       <!-- this section for instantly -->
