fully responsive update

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
               src="images/Rectangle 4.png"
               alt="rectangle"
             />
+            <div class="image-content">
+              <img
+                class="content-item"
+                src="logos/play-button 1.png"
+                alt="play-button"
+              />
+              <p class="watch-now">Watch Now</p>
+            </div>
           </div>
           <p class="box-txt">
             No Download. No Installs. Play games Instantly on Gamer.
@@ -118,6 +126,14 @@
               src="images/Rectangle 5.png"
               alt="rectangle"
             />
+            <div class="image-content">
+              <img
+                class="content-item"
+                src="logos/play-button 1.png"
+                alt="play-button"
+              />
+              <p class="watch-now">Watch Now</p>
+            </div>
           </div>
           <p class="box-txt">Did you score? #unblockedgames #school</p>
         </div>
@@ -128,6 +144,14 @@
               src="images/Rectangle 7.png"
               alt="rectangle"
             />
+            <div class="image-content">
+              <img
+                class="content-item"
+                src="logos/play-button 1.png"
+                alt="play-button"
+              />
+              <p class="watch-now">Watch Now</p>
+            </div>
           </div>
           <p class="box-txt">Breaking game records like OG</p>
         </div>
@@ -138,6 +162,14 @@
               src="images/Rectangle 6.png"
               alt="rectangle"
             />
+            <div class="image-content">
+              <img
+                class="content-item"
+                src="logos/play-button 1.png"
+                alt="play-button"
+              />
+              <p class="watch-now">Watch Now</p>
+            </div>
           </div>
           <p class="box-txt">
             Busted gaming on school laptop, but you are still lit.
